--- a/microservices/edge/src/main/resources/static/home.html
+++ b/microservices/edge/src/main/resources/static/home.html
@@ -1,5 +1,5 @@
 <h1>Greeting</h1>
 <div ng-show="authenticated">
   <p>Your welcome</p>
-  <p>Go to <a href="frontend/ui">Vaadin-Frontend</a></p>
+  <p>Go to <a href="http://localhost:8080/frontend/ui">Vaadin-Frontend</a></p>
 </div>
