https, logout, header in vaadin

--- a/microservices/edge/src/main/resources/static/index.html
+++ b/microservices/edge/src/main/resources/static/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>Hello AngularJS</title>
+<title>microservices4vaadin</title>
 <link
   href="webjars/bootstrap/3.2.0/css/bootstrap.css"
   rel="stylesheet">
