--- a/microservices/edge/src/main/resources/static/login.html
+++ b/microservices/edge/src/main/resources/static/login.html
@@ -9,7 +9,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Landingpage title</a>
+        <a class="navbar-brand" href="#">microservices4vaadin - Landing page</a>
       </div>
 
 
