some notes to big problem

--- a/microservices/edge/src/main/resources/static/index.html
+++ b/microservices/edge/src/main/resources/static/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Lessoria</title>
+  <title>microservices4vaadin</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link
     href="webjars/bootstrap/3.3.7/css/bootstrap.css"
