--- a/microservices/edge/src/main/resources/static/login.html
+++ b/microservices/edge/src/main/resources/static/login.html
@@ -34,13 +34,11 @@
           <div class="alert alert-danger" ng-show="error">
             There was a problem logging in. Please try again.
           </div>
-          <div class="input-group">
-              <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+          <div class="form-group">
               <input id="email" type="text" class="form-control" name="username" value="" placeholder="Username" ng-model="credentials.username">
           </div>
 
-          <div class="input-group">
-              <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+          <div class="form-group">
               <input id="password" type="password" class="form-control" name="password" value="" placeholder="Password" ng-model="credentials.password">
           </div>
 
